2005-09-09  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic-loader.[ch]: 
	* src/buoh-view-comic.c:
	Show gnome-vfs errors in the message error view instead of the console

2005-09-08  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-window.c: Save a copy menu item disabled by default

2005-09-08  Carlos Garcia Campos  <carlosgc@gnome.org>

	* TODO: Updated

	* src/Makefile.am: Updated for new files
	* buoh-view-comic.[ch]: Added

	* src/buoh-view.[ch]: Move the comic view stuff to a new class. Add
	status attribute in order to allow the window keep updated 
	according to the view status. Add a signal that will be emitted when
	the comic view changes the scale.

	* src/buoh-window.c: Setup sensitivities of menus and toolbar
	depending on the view status

2005-09-07  Esteban Sanchez <esteban@steve-o.org>
	
	* src/buoh-comic-manager.[ch]: Added.

2005-09-07  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/Makefile.am: Fix build problems

2005-09-06  Esteban Sanchez <esteban@steve-o.org>

	* data/comics.xml: Fixed bug with "Little Dee".

	* data/Makefile.am, interfaces/Makefile.am, pixmaps/Makefile.am:
	Renamed *DATA variables.

2005-09-05  Carlos Garcia Campos  <carlosgc@gnome.org>

	* TODO: Updated

	* src/buoh-comic-loader.[ch]: Use async operations so that the loader
	thread is not blocked anymore. We can stop the thread even if it is
	resolving the url or reading data. In the future we will be able to
	provide feedback when the loader is resolving, just before starting to
	show the comic.
	
2005-09-04  Esteban Sanchez <esteban@steve-o.org>

	* po/PORTILES.in: Updated with new files

2005-08-31  Esteban Sanchez <esteban@steve-o.org>

	* data/comics.xml: Added other five new comics. Reviewed the
	restrictions of some comics. Solved bug with "Scary go round". 

2005-08-24  Esteban Sanchez <esteban@steve-o.org>

	* data/comics.xml: Added five new comics, please check the
	restrictions.

2005-08-19  Pablo Arroyo <zioma@linups.org>
